made some progress

--- a/site/index.html
+++ b/site/index.html
@@ -1,1 +1,8 @@
-<p>Site powered by soupault</p>
+<div id="about">
+    <div id="portrait">
+        <img src="/images/me-desat.jpg" alt="portrait" width="250" height="250" id="portrait">
+    </div>
+    <div id="about-body">
+        I'm Samuel Thomas. There are more words and some more words.
+    </div>
+</div>
