--- a/site/index.html
+++ b/site/index.html
@@ -10,6 +10,8 @@
         the way that we think about the world.
         </p>
 
+        Some words to test deployment!
+
         <p>
         I am currently working on languages for hardware acceleration in the <a href="https://capra.cs.cornell.edu/">Cornell Capra</a> lab.
         </p>
