added some project info

--- a/site/contact.html
+++ b/site/contact.html
@@ -1,9 +1,11 @@
-<div>
-    Email me at <a href="mailto:sgt43@cornell.edu">sgt43@cornell.edu</a>.
-</div>
-<div>
-    Check out my <a href="https://github.com/sgpthomas/">github</a>.
-</div>
-<div>
-    I'm not very active on <a href="https://twitter.com/peacock_samuel">twitter</a> but here it is anyways.
+<div id="contact">
+    <div>
+        Email me at <a href="mailto:sgt43@cornell.edu">sgt43@cornell.edu</a>.
+    </div>
+    <div>
+        Check out my <a href="https://github.com/sgpthomas/">github</a>.
+    </div>
+    <div>
+        I'm not very active on <a href="https://twitter.com/peacock_samuel">twitter</a> but here it is anyways.
+    </div>
 </div>
