--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,9 @@
         </p>
 
         <p>
-        I am currently working on languages for hardware acceleration in the <a href="https://capra.cs.cornell.edu/">Cornell Capra</a> lab.
+            I am currently working with <a href="https://www.cs.cornell.edu/~asampson/">Adrian Samspon</a> and
+            <a href="https://rachitnigam.com/">Rachit Nigam</a> on languages
+            for hardware acceleration in the <a href="https://capra.cs.cornell.edu/">Cornell Capra</a> lab.
         </p>
     </div>
 </div>
