added some stubs for projects

--- a/site/projects.html
+++ b/site/projects.html
@@ -33,3 +33,33 @@ TODO: pics!
 <h2>Polka</h2>
 <a href="https://github.com/sgpthomas/polka">Polka</a> is a simple and extensible framework for keeping a single set of dot files
 across multiple machines. TODO: write more.
+
+<h2>LED Light Strip</h2>
+<p>
+    <a href="https://github.com/sgpthomas/light-tunnel-rkt">Light tunnel racket</a>
+</p>
+<p>
+    <a href="https://github.com/sgpthomas/moodlight">Moodlight interface</a>
+</p>
+<h2>Data Scientist in a Box</h2>
+<p>
+    <a href="https://github.com/sgpthomas/sklearn-pmlb-benchmarks">PMLB Benchmark extension</a>
+</p>
+<p>
+    <a href="https://github.com/sgpthomas/aws-automation">Aws Spot Fleet Automation Tool</a>
+</p>
+<p>
+    <a href="https://github.com/sgpthomas/isi-analysis">PMLB analysis for ISI</a>
+</p>
+<p>
+    <a href="https://github.com/sgpthomas/isi-metafeature-exploration">Metafeature exploration for ISI</a>
+</p>
+
+<h2>Elementary OS Apps</h2>
+
+<h2>Distributed Systems Experimental Framework</h2>
+
+<h2>Work in progress</h2>
+<p>
+    <a href="https://github.com/sgpthomas/sexpy">Rust S-Exp Parser</a>
+</p>
