added the sion poem with javascript

--- a/site/index.html
+++ b/site/index.html
@@ -4,16 +4,15 @@
     </div>
     <div id="about-body">
         <p>
-        I'm currently an undergraduate studying Computer Science at Cornell University.
-        I like programming languages and thinking about how humans use abstractions to model the world around us.
-        It is important to understand these abstractions so that we can use them more effectively and because they can unknowingly shape
-        the way that we think about the world.
+	  I'm a grad student (!!) studying with <a href="https://www.cs.utexas.edu/~bornholt/">James Bornholt</a> at UT Austin. I don't know exactly
+	  what I want to work with yet, but I'm interested in applications of PL Theory to synthesis,
+	  verification, and design problems.
         </p>
 
         <p>
-            I am currently working with <a href="https://www.cs.cornell.edu/~asampson/">Adrian Samspon</a> and
-            <a href="https://rachitnigam.com/">Rachit Nigam</a> on languages
-            for hardware acceleration in the <a href="https://capra.cs.cornell.edu/">Cornell Capra</a> lab.
+            I am indebted to <a href="https://www.cs.cornell.edu/~asampson/">Adrian Samspon</a> and
+            <a href="https://rachitnigam.com/">Rachit Nigam</a>. They were my mentors at Cornell and
+	    without them I wouldn't be where I am today. Check out the work they do at <a href="https://capra.cs.cornell.edu/">Cornell Capra</a>.
         </p>
     </div>
 </div>
